--- a/packages/components/Collection/Row.html
+++ b/packages/components/Collection/Row.html
@@ -185,7 +185,7 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    height: 25px;
+    height: $row-top-height;
   }
 
   .left-area {
