--- a/packages/components/Input/Text.html
+++ b/packages/components/Input/Text.html
@@ -152,6 +152,7 @@
       },
       openKeyboard() {
         this.set({ active: true });
+        this.refs.keyboardInput.focus();
       },
       closeKeyboard() {
         this.set({ active: false });
