Fix mamba-app-container check when node is not of type 1

--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -137,12 +137,15 @@
         /* istanbul ignore next */
         if (!__TEST__ && __BROWSER__) {
           const eventPath = e.path || (e.composedPath && e.composedPath());
-          if (
+          const isInsideApp =
             eventPath &&
-            !eventPath.find(node =>
-              node.classList.contains('mamba-app-container'),
-            )
-          ) {
+            eventPath.some(
+              node =>
+                node.nodeType === 1 &&
+                node.classList.contains('mamba-app-container'),
+            );
+
+          if (!isInsideApp) {
             return;
           }
         }
@@ -169,11 +172,16 @@
         /* istanbul ignore next */
         if (!__TEST__ && __BROWSER__) {
           const eventPath = e.path || (e.composedPath && e.composedPath());
-          if (
+          const isInsideApp =
             eventPath &&
-            !eventPath.find(node =>
-              node.classList.contains('mamba-app-container'),
-            ) &&
+            eventPath.some(
+              node =>
+                node.nodeType === 1 &&
+                node.classList.contains('mamba-app-container'),
+            );
+
+          if (
+            !isInsideApp &&
             (e.target.tagName === 'INPUT' || e.target.tagName === 'TEXTAREA') &&
             !Keyboard.isActionKey(keyCode)
           ) {
