internal: 🏭 disallow user text selection on simulated screen

--- a/packages/pos/simulator/view/pos/hardware/Screen.html
+++ b/packages/pos/simulator/view/pos/hardware/Screen.html
@@ -109,7 +109,7 @@
       height: 100%;
       flex: 0 1 auto;
       overflow: hidden;
-      user-select: text;
+      /* user-select: text; */
     }
 
     /** Makes, in chrome, all fixed elements relative to the screen div */
