--- a/packages/components/Input/Text.html
+++ b/packages/components/Input/Text.html
@@ -60,7 +60,7 @@
         >
           {layout.utilityKeys[0]}
         </div>
-        <div class="key space" style={keyStyle} on:click="typeKey(' ')"></div>
+        <div class="key space" style={keyStyle} on:click="typeKey(' ')">___</div>
         <div class="key bigger" style={keyStyle} on:click="typeKey(layout.utilityKeys[1])">
           {layout.utilityKeys[1]}
         </div>
@@ -123,9 +123,11 @@
           .join(';');
       },
       capslockStyle({ keyTextColor, mode }) {
-        return `${
-          mode === 'capitalized' ? 'opacity: 1;' : 'opacity: 0.35;'
-        } background-color: ${keyTextColor};`;
+        const opacity =
+          mode === 'capitalized' ? 'opacity: 0.8;' : 'opacity: 0.35;';
+        return [opacity, keyTextColor && `background-color: ${keyTextColor};`]
+          .filter(Boolean)
+          .join(';');
       },
     },
     oncreate() {
@@ -232,7 +234,7 @@
     padding: 8px 2px;
     border-radius: 3px;
     cursor: pointer;
-    font-size: 12px;
+    font-size: 14px;
     text-align: center;
     margin: 0 auto;
   }
@@ -294,10 +296,12 @@
 
   .utility-key.capslock {
     mask-image: url(./assets/capslock.svg);
+    background-color: black;
   }
 
   .utility-key.backspace {
     mask-image: url(./assets/backspace.svg);
+    background-color: black;
   }
 
   .key.bigger {
