--- a/packages/components/Input/Money.html
+++ b/packages/components/Input/Money.html
@@ -14,7 +14,7 @@
 <script>
   import System from '@mamba/pos/api/system.js';
   import Keyboard from '@mamba/pos/api/keyboard.js';
-  import formatMoney from './libs/formatMoney.js';
+  import { format as formatMoney } from '@mamba/utils/money.js';
 
   export default {
     components: {
