--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -287,7 +287,7 @@
     height: 100%;
 
     &.no-scroll {
-      overflow: hidden;
+      overflow: hidden !important; /* stylelint-disable-line */
     }
   }
 </style>
