--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -136,7 +136,7 @@
     width: 100%;
     bottom: 0;
 
-    :global(.mamba-app-container.has-appbar) &:not(.is-fullscreen) {
+    :global(.mamba-app.has-appbar) &:not(.is-fullscreen) {
       top: $appbar-height;
 
       &::before {
