--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -67,7 +67,7 @@
 
       /* istanbul ignore else */
       if (root.meta) {
-        root.meta.set({ _hasAppbar: true });
+        root.meta.set({ hasAppbar: true });
         root.meta.on('update', ({ changed, current }) => {
           /* istanbul ignore else */
           if (changed.navigable) {
@@ -79,7 +79,7 @@
     ondestroy() {
       /* istanbul ignore else */
       if (this.root.meta) {
-        this.root.meta.set({ _hasAppbar: false });
+        this.root.meta.set({ hasAppbar: false });
       }
     },
     onstate({ changed, current }) {
