--- a/packages/pos/simulator/view/pos/panels/Http.html
+++ b/packages/pos/simulator/view/pos/panels/Http.html
@@ -8,23 +8,44 @@
   {#if simulateRequest}
     <li class="controller">
       <span>Código</span>
-      <select on:change="set({ 'requestMsg': event.target.value })">
-          <option value={`{"status":201, "msg": "Succcess"}`} default>201</option>
-          <option value={`{"status":204, "msg": "Success"}`}>202</option>
-          <option value={`{"status":204, "msg": "Success"}`}>204</option>
-          <option value={`{"status":400, "msg": "Error"}`}>400</option>
-          <option value={`{"status":401, "msg": "Error"}`}>401</option>
-          <option value={`{"status":403, "msg": "Error"}`}>403</option>
-          <option value={`{"status":404, "msg": "Error"}`}>404</option>
-          <option value={`{"status":408, "msg": "Error"}`}>408</option>
-          <option value={`{"status":500, "msg": "Error"}`}>500</option>
+      <select on:change="set({ requestMsg: event.target.value })">
+          <option value={`{"status":200, "msg": "OK"}`} default>200</option>
+          <option value={`{"status":201, "msg": "Created"}`}>201</option>
+          <option value={`{"status":202, "msg": "Accepted"}`}>202</option>
+          <option value={`{"status":203, "msg": "Non-authoritative Information"}`}>203</option>
+          <option value={`{"status":204, "msg": "No Content"}`}>204</option>
+          <option value={`{"status":400, "msg": "Bad Request"}`}>400</option>
+          <option value={`{"status":401, "msg": "Unauthorized"}`}>401</option>
+          <option value={`{"status":403, "msg": "Forbidden"}`}>403</option>
+          <option value={`{"status":404, "msg": "Not Found"}`}>404</option>
+          <option value={`{"status":408, "msg": "Request Timeout"}`}>408</option>
+          <option value={`{"status":500, "msg": "Internal Server Error"}`}>500</option>
+          <option value={`{"status":504, "msg": "Gateway Time-Out"}`}>504</option>
       </select>
+    </li>
+
+    <li class="controller is-full">
+      <span>Timeout</span>
+      <input type="text" bind:value="timeout"/>
     </li>
     <li class="controller is-full">
       <span>Payload</span>
       <textarea rows="4" style="resize:none;" bind:value="requestPayload"/>
     </li>
   {/if}
+
+  <li class="controller">
+    <span>Ativar proxy</span>
+    <Switch bind:checked="activeProxy" />
+  </li>
+
+  {#if activeProxy}
+    <li class="controller is-full">
+      <span>AppKey</span>
+      <input type="text" bind:value="appKey"/>
+    </li>
+  {/if}
+
 </ul>
 
 <script>
@@ -35,10 +56,26 @@
       Switch: '@mamba/switch',
     },
     data() {
-      return { ...Registry.get().$Http.panel };
+      const {
+        $App: { appKey },
+      } = Registry.persistent.get();
+
+      return {
+        ...Registry.get().$Http.panel,
+        appKey,
+        timeout: 0,
+      };
     },
-    onupdate({ previous, current }) {
+    oncreate() {
+      this.set({ requestMsg: `{"status":200, "msg": "OK"}` });
+    },
+    onupdate({ previous, changed, current }) {
       if (previous) {
+        Registry.persistent.set(draft => {
+          if (changed.appKey) {
+            draft.$App.appKey = current.appKey;
+          }
+        });
         Registry.set(draft => {
           draft.$Http.panel = current;
         });
