--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -34,3 +34,9 @@ $switch-checked-bg: rgba($green, 0.5);
 $switch-checked-color: $green;
 $switch-disabled-bg: $silver;
 $switch-disabled-color: $silver;
+
+/* Tabs component */
+$tab-navigation-bg: #f2f2f2;
+$tab-label-color: #65777f;
+$tab-line-color: $green;
+$tab-height: 40px;
