internal(@mamba/styles): 🏭 Add tab font size variable

--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -38,5 +38,6 @@ $switch-disabled-color: $silver;
 /* Tabs component */
 $tab-navigation-bg: #f2f2f2;
 $tab-label-color: #65777f;
+$tab-item-font-size: 13px;
 $tab-line-color: $green;
 $tab-height: 40px;
