internal: 🏭 Add tab item font size variable

--- a/packages/components/Tabs/Tabs.html
+++ b/packages/components/Tabs/Tabs.html
@@ -58,7 +58,7 @@
     td {
       vertical-align: middle;
       text-align: center;
-      font-size: 13px;
+      font-size: $tab-item-font-size;
       color: $tab-label-color;
       position: relative;
       height: 100%;
